--- a/Tema-3/Ejercicio27/nbproject/project.properties
+++ b/Tema-3/Ejercicio27/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Ejercicio27
-main.class=Ejercicio27
+main.class=ejercicio27.Ejercicio27
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
